{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Controller",
            "id": "79e898bd-bd6f-4514-af73-495a1fef30f3",
            "actions": [
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "6729a8a6-6f48-4121-a9ac-47e6c5617fc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GaugeRefill",
                    "type": "Button",
                    "id": "30bbcc9b-7a65-48d8-afec-128408e32dc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "610930cd-e208-4d0c-af58-9a80a77ee3e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StandardAttack",
                    "type": "Button",
                    "id": "9ec31b04-aa3a-4582-9e46-c15ac957019e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousSelection",
                    "type": "Button",
                    "id": "712cc7b4-c965-4e57-bfc2-d932aa13bca3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextSelection",
                    "type": "Button",
                    "id": "4c6e6b7c-91f0-48fe-892f-3fd568995aaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "712e7496-64ff-4a00-b3df-bd569667be1e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21b9383e-9741-4506-abad-871edec483f6",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GaugeRefill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f4939e5-d57d-4fec-841b-773ab09eda54",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69a0e786-7ec5-4ae3-b650-1fa6a78bbc1c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StandardAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "184afd1a-35b5-4b21-a8e5-a6cbfdc7fffa",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9280bc1-1315-487b-bf19-cf3da1b2062e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}